# WG-Forge-test-task

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks1_2.py
service/: db.py  server.py
tests/: test_app.py
